--- a/PackageInstaller/Pages/Error.xaml
+++ b/PackageInstaller/Pages/Error.xaml
@@ -6,6 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:PackageInstaller.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:a="using:Microsoft.UI.Xaml.Automation"
+    a:AutomationProperties.AutomationId="ReactivePageError"
     mc:Ignorable="d"
 >
     <controls:Grid Padding="40">
@@ -19,9 +21,9 @@
             <controls:RowDefinition Height="Auto" />
         </controls:Grid.RowDefinitions>
         <controls:TextBlock controls:Grid.Column="0" TextWrapping="Wrap">
-            <Run x:Name="Title" FontSize="24" FontWeight="Bold" />
+            <Run x:Name="Title" FontSize="24" FontWeight="Bold" a:AutomationProperties.AutomationId="ErrorTitle" />
             <LineBreak />
-            <Run x:Name="Description" />
+            <Run x:Name="Description" a:AutomationProperties.AutomationId="ErrorDescription" />
         </controls:TextBlock>
 
         <controls:ScrollViewer
@@ -57,7 +59,7 @@
                 Content="Show details"
                 IsEnabled="True"
             />
-            <controls:Button x:Name="Button" Content="Close" />
+            <controls:Button x:Name="Button" Content="Close" a:AutomationProperties.AutomationId="CloseButton" />
         </controls:StackPanel>
     </controls:Grid>
 </local:ReactivePageError>
